force-app/main/default/objects/Quote_Home__dlm/fields/Engie_opp_name_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_opp_name_c__c</fullName>
    <label>Engie : nom de l&apos;opp</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : nom de l&apos;opp</labelOverride>
        <masterLabel>Engie : nom de l&apos;opp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>