force-app/main/default/objects/Quote_Home__dlm/fields/Engie_url_plateforme_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_url_plateforme_c__c</fullName>
    <label>Engie : url plateforme</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : url plateforme</labelOverride>
        <masterLabel>Engie : url plateforme</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Url</type>
</CustomField>