force-app/main/default/objects/Quote_Home__dlm/fields/Engie_validity_duration_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_validity_duration_c__c</fullName>
    <label>Engie : durée de validité (en jour)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : durée de validité (en jour)</labelOverride>
        <masterLabel>Engie : durée de validité (en jour)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>