force-app/main/default/objects/Quote_Home__dlm/fields/FinCouvertureGarantieOrigine_c__c.field-meta.xml
<CustomField>
    <fullName>FinCouvertureGarantieOrigine_c__c</fullName>
    <label>Fin de couverture</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Fin de couverture</labelOverride>
        <masterLabel>Fin de couverture</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>