force-app/main/default/objects/Quote_Home__dlm/fields/Frais_Distribution_Variable_c__c.field-meta.xml
<CustomField>
    <fullName>Frais_Distribution_Variable_c__c</fullName>
    <label>Frais Distribution Variable</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Frais Distribution Variable</labelOverride>
        <masterLabel>Frais Distribution Variable</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>