force-app/main/default/objects/Quote_Home__dlm/fields/IsGarantieOrigine_c__c.field-meta.xml
<CustomField>
    <fullName>IsGarantieOrigine_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantie d&apos;Origine ?</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Garantie d&apos;Origine ?</labelOverride>
        <masterLabel>Garantie d&apos;Origine ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>