force-app/main/default/objects/Quote_Home__dlm/fields/IsOptimisationTURPE_c__c.field-meta.xml
<CustomField>
    <fullName>IsOptimisationTURPE_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimisation TURPE ?</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Optimisation TURPE ?</labelOverride>
        <masterLabel>Optimisation TURPE ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>