force-app/main/default/objects/Quote_Home__dlm/fields/KQ_AccountId__c.field-meta.xml
<CustomField>
    <fullName>KQ_AccountId__c</fullName>
    <label>Key Qualifier ID du compte</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier ID du compte</labelOverride>
        <masterLabel>Key Qualifier ID du compte</masterLabel>
        <refAttrDeveloperName>KQ_AccountId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>