force-app/main/default/objects/Quote_Home__dlm/fields/LogoCompactLayout_c__c.field-meta.xml
<CustomField>
    <fullName>LogoCompactLayout_c__c</fullName>
    <label>Logo du fournisseur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Logo du fournisseur</labelOverride>
        <masterLabel>Logo du fournisseur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>