force-app/main/default/objects/Quote_Home__dlm/fields/Marge_Mwh_T2_c__c.field-meta.xml
<CustomField>
    <fullName>Marge_Mwh_T2_c__c</fullName>
    <label>Marge globale €/Mwh T2</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Marge globale €/Mwh T2</labelOverride>
        <masterLabel>Marge globale €/Mwh T2</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>