force-app/main/default/objects/Quote_Home__dlm/fields/MargeInterventionPEPS_c__c.field-meta.xml
<CustomField>
    <fullName>MargeInterventionPEPS_c__c</fullName>
    <label>Marge intervention PEPS</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Marge intervention PEPS</labelOverride>
        <masterLabel>Marge intervention PEPS</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>