force-app/main/default/objects/Quote_Home__dlm/fields/Maximum_date_de_fin_c__c.field-meta.xml
<CustomField>
    <fullName>Maximum_date_de_fin_c__c</fullName>
    <label>Maximum date de fin</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Maximum date de fin</labelOverride>
        <masterLabel>Maximum date de fin</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>