force-app/main/default/objects/Quote_Home__dlm/fields/Minimum_date_de_debut_c__c.field-meta.xml
<CustomField>
    <fullName>Minimum_date_de_debut_c__c</fullName>
    <label>Minimum date de début</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Minimum date de début</labelOverride>
        <masterLabel>Minimum date de début</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>