force-app/main/default/objects/Quote_Home__dlm/fields/Numero_Dossier_API_Endesa_Elec_c__c.field-meta.xml
<CustomField>
    <fullName>Numero_Dossier_API_Endesa_Elec_c__c</fullName>
    <label>Numero Dossier API Endesa Elec</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Numero Dossier API Endesa Elec</labelOverride>
        <masterLabel>Numero Dossier API Endesa Elec</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>