force-app/main/default/objects/Quote_Home__dlm/fields/OrigineGarantieOrigine_c__c.field-meta.xml
<CustomField>
    <fullName>OrigineGarantieOrigine_c__c</fullName>
    <label>Origine</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Origine</labelOverride>
        <masterLabel>Origine</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>