force-app/main/default/objects/Quote_Home__dlm/fields/PrixGarantieOrigine_c__c.field-meta.xml
<CustomField>
    <fullName>PrixGarantieOrigine_c__c</fullName>
    <label>Prix de la garantie d&apos;origine (€HT/MWh)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Prix de la garantie d&apos;origine (€HT/MWh)</labelOverride>
        <masterLabel>Prix de la garantie d&apos;origine (€HT/MWh)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>