force-app/main/default/objects/Quote_Home__dlm/fields/QuoteToCity__c.field-meta.xml
<CustomField>
    <fullName>QuoteToCity__c</fullName>
    <label>Rue de l&apos;adresse d&apos;expédition du devis</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Rue de l&apos;adresse d&apos;expédition du devis</labelOverride>
        <masterLabel>Rue de l&apos;adresse d&apos;expédition du devis</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>