force-app/main/default/objects/Quote_Home__dlm/fields/QuoteToGeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>QuoteToGeocodeAccuracy__c</fullName>
    <label>QuoteToGeocodeAccuracy</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>QuoteToGeocodeAccuracy</labelOverride>
        <masterLabel>QuoteToGeocodeAccuracy</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>