force-app/main/default/objects/Quote_Home__dlm/fields/QuoteToLatitude__c.field-meta.xml
<CustomField>
    <fullName>QuoteToLatitude__c</fullName>
    <label>QuoteToLatitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>QuoteToLatitude</labelOverride>
        <masterLabel>QuoteToLatitude</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>