force-app/main/default/objects/Quote_Home__dlm/fields/QuoteToLongitude__c.field-meta.xml
<CustomField>
    <fullName>QuoteToLongitude__c</fullName>
    <label>Longitude de destinataire de devis</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Longitude de destinataire de devis</labelOverride>
        <masterLabel>Longitude de destinataire de devis</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>