force-app/main/default/objects/Quote_Home__dlm/fields/QuoteToName__c.field-meta.xml
<CustomField>
    <fullName>QuoteToName__c</fullName>
    <label>Nom de l&apos;adresse de livraison du devis</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Nom de l&apos;adresse de livraison du devis</labelOverride>
        <masterLabel>Nom de l&apos;adresse de livraison du devis</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>