force-app/main/default/objects/Quote_Home__dlm/fields/QuoteToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>QuoteToPostalCode__c</fullName>
    <label>QuoteToPostalCode</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>QuoteToPostalCode</labelOverride>
        <masterLabel>QuoteToPostalCode</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>