force-app/main/default/objects/Quote_Home__dlm/fields/QuoteToState__c.field-meta.xml
<CustomField>
    <fullName>QuoteToState__c</fullName>
    <label>QuoteToState</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>QuoteToState</labelOverride>
        <masterLabel>QuoteToState</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>