force-app/main/default/objects/Quote_Home__dlm/fields/rel_1772195653642_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1772195653642_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote_Home_AccountId_map_ssot_Accoun_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Quote_Home_AccountId_map_ssot_Accoun_rel</relationshipLabel>
    <relationshipName>rel_1772195653642_end</relationshipName>
    <type>Lookup</type>
</CustomField>