force-app/main/default/objects/Quote_Home__dlm/fields/ShippingGeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>ShippingGeocodeAccuracy__c</fullName>
    <label>ShippingGeocodeAccuracy</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ShippingGeocodeAccuracy</labelOverride>
        <masterLabel>ShippingGeocodeAccuracy</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>