force-app/main/default/objects/Quote_Home__dlm/fields/ShippingHandling__c.field-meta.xml
<CustomField>
    <fullName>ShippingHandling__c</fullName>
    <label>Expédition et manutention</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Expédition et manutention</labelOverride>
        <masterLabel>Expédition et manutention</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>