force-app/main/default/objects/Quote_Home__dlm/fields/ShippingLongitude__c.field-meta.xml
<CustomField>
    <fullName>ShippingLongitude__c</fullName>
    <label>Longitude de l&apos;adresse d&apos;expédition</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Longitude de l&apos;adresse d&apos;expédition</labelOverride>
        <masterLabel>Longitude de l&apos;adresse d&apos;expédition</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>