force-app/main/default/objects/Quote_Home__dlm/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>État</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>État</labelOverride>
        <masterLabel>État</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>