force-app/main/default/objects/Quote_Home__dlm/fields/Status_Offre_API_Endesa_Elec_c__c.field-meta.xml
<CustomField>
    <fullName>Status_Offre_API_Endesa_Elec_c__c</fullName>
    <label>Status Offre API Endesa Elec</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Status Offre API Endesa Elec</labelOverride>
        <masterLabel>Status Offre API Endesa Elec</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>